# RayMarching_tool

./: CMakeLists.txt  README.md  frag.spv  imgui.ini
cmake/: sources_app.cmake  sources_common.cmake  sources_input.cmake  sources_io.cmake  sources_platform.cmake  sources_rendering.cmake  sources_scene.cmake  sources_ui.cmake
docs/architecture/: dependency-rules.md  module-map.md
docs/refactor/: wrapper-removal-plan.md
include/: GuiManager.h  ImGuiLayer.h  Input.h  MeshExporter.h  MeshImporter.h  MeshSDFRegistry.h  RenderSettings.h  Renderer.h  Shader.h  Shapes.h  Texture.h  UndoRedo.h  Utilities.h
include/rmt/: RenderSettings.h
include/rmt/app/: Application.h  EditorRuntime.h  OrbitCamera.h  RunMode.h  UndoRedoManager.h
include/rmt/app/benchmark/: BenchmarkCapture.h  BenchmarkReport.h  BenchmarkRunner.h  BenchmarkScenes.h
include/rmt/app/cli/: BenchmarkOptions.h  BenchmarkOptionsParser.h
include/rmt/common/fs/: DirectoryUtils.h
include/rmt/common/hash/: Fnv1a.h
include/rmt/common/io/: PpmCodec.h
include/rmt/common/math/: MatrixMath.h  SphericalCoordinates.h  Vec3Math.h
include/rmt/input/: GeneralShortcuts.h  Input.h  ViewportInteraction.h
include/rmt/input/transform/: MirrorHelperTool.h  RotationTool.h  ScaleTool.h  TransformModeActivator.h  TranslationTool.h
include/rmt/io/mesh/: MeshSdfRegistry.h
include/rmt/io/mesh/export/: BoundingBoxEstimator.h  MarchingCubesRunner.h  MeshExporter.h  ObjWriter.h
include/rmt/io/mesh/import/: AssimpMeshLoader.h  ImportedShapeFactory.h  MeshImporter.h  MeshNormalizer.h  SdfVoxelizer.h
include/rmt/platform/glfw/: Callbacks.h  FileDropQueue.h
include/rmt/platform/imgui/: ImGuiLayer.h
include/rmt/rendering/: AccelerationGridBuilder.h  DebugCounterReader.h  MirrorHelperUniforms.h  PathTracerPipeline.h  PathTracerResources.h  PerfTelemetry.h  Renderer.h  RendererState.h  SceneBufferPacker.h  SceneHasher.h  ShaderProgram.h  Texture2D.h  UniformUploader.h
include/rmt/scene/: EvalStats.h  RayPicker.h  RuntimeSceneEvaluator.h  RuntimeShapeBuilder.h  RuntimeShapeData.h  Shape.h  ShapeEnums.h
include/rmt/scene/blending/: BlendOps.h
include/rmt/scene/modifiers/: ShapeModifiers.h
include/rmt/scene/primitives/: PrimitiveDistance.h
include/rmt/ui/: UiFacade.h  UiState.h
include/rmt/ui/console/: Console.h
include/rmt/ui/gizmo/: GizmoController.h
include/rmt/ui/layout/: WorkspaceLayout.h
include/rmt/ui/panels/: ExportDialogPanel.h  InspectorPanel.h  ModifierPanel.h  ScenePanel.h  ShortcutsPanel.h  ToolbarPanel.h  ViewportPanel.h
include/rmt/ui/style/: ImGuiTheme.h
shaders/: Display_texture.glsl  Pathtracer.glsl  Solid_renderer.glsl  fragment.glsl
shaders/pathtracer/: 00_interface_and_accel.glsl  10_sdf_scene_eval.glsl  20_pathtrace_and_main.glsl
shaders/solid/: 00_interface_and_accel.glsl  10_sdf_primitives_and_shapes.glsl  20_scene_eval_and_march.glsl  30_lighting_and_main.glsl
src/: GuiManager.cpp  ImGuiLayer.cpp  Input.cpp  MarchingCubesTables.cpp  MeshExporter.cpp  Renderer.cpp  Shader.cpp  Shapes.cpp  Texture.cpp  UndoRedo.cpp  Utilities.cpp  main.cpp
src/app/: Application.cpp  EditorRuntime.cpp  OrbitCamera.cpp  UndoRedoManager.cpp
src/app/benchmark/: BenchmarkCapture.cpp  BenchmarkReport.cpp  BenchmarkRunner.cpp  BenchmarkScenes.cpp
src/app/cli/: BenchmarkOptionsParser.cpp
src/common/fs/: DirectoryUtils.cpp
src/common/hash/: Fnv1a.cpp
src/common/io/: PpmCodec.cpp
src/common/math/: SphericalCoordinates.cpp
src/input/: GeneralShortcuts.cpp  InputController.cpp  ViewportInteraction.cpp
src/input/transform/: MirrorHelperTool.cpp  RotationTool.cpp  ScaleTool.cpp  TransformModeActivator.cpp  TransformToolCommon.h  TranslationTool.cpp
src/io/mesh/: MeshSdfRegistry.cpp
src/io/mesh/export/: BoundingBoxEstimator.cpp  MarchingCubesRunner.cpp  MarchingCubesTables.cpp  MeshExporter.cpp  ObjWriter.cpp
src/io/mesh/import/: AssimpMeshLoader.cpp  ImportedShapeFactory.cpp  MeshImportInternals.h  MeshImporter.cpp  MeshNormalizer.cpp  SdfVoxelizer.cpp
src/platform/glfw/: Callbacks.cpp  FileDropQueue.cpp
src/platform/imgui/: ImGuiLayer.cpp
src/rendering/: AccelerationGridBuilder.cpp  DebugCounterReader.cpp  MirrorHelperUniforms.cpp  PathTracerPipeline.cpp  PathTracerResources.cpp  PerfTelemetry.cpp  Renderer.cpp  RendererInternal.h  RendererState.cpp  SceneBufferPacker.cpp  SceneHasher.cpp  ShaderProgram.cpp  Texture2D.cpp  UniformUploader.cpp
src/scene/: EvalStats.cpp  RayPicker.cpp  RuntimeSceneEvaluator.cpp  RuntimeShapeBuilder.cpp
src/scene/blending/: BlendOps.cpp
src/scene/modifiers/: ShapeModifiers.cpp
src/scene/primitives/: PrimitiveDistance.cpp
src/ui/: UiFacade.cpp  UiState.cpp
src/ui/console/: Console.cpp
src/ui/gizmo/: GizmoController.cpp
src/ui/layout/: WorkspaceLayout.cpp
src/ui/panels/: ExportDialogPanel.cpp  InspectorPanel.cpp  ModifierPanel.cpp  ScenePanel.cpp  ShortcutsPanel.cpp  ToolbarPanel.cpp  ViewportPanel.cpp
src/ui/style/: ImGuiTheme.cpp
